# checkersEngine

./: CMakeLists.txt  LICENSE.md  README.md  build_and_start.sh  main.cpp
src/: EngineBase.cpp  EngineBase.h  Engines.cpp  Engines.hpp  Game.cpp  Game.h  LidraughtsActivity.cpp  LidraughtsActivity.h  LidraughtsGame.cpp  LidraughtsGame.h  LidraughtsPuzzle.cpp  LidraughtsPuzzle.h  MinimaxEngine.cpp  MinimaxEngine.h  MinimaxEngineNoMemory.cpp  MinimaxEngineNoMemory.h  Position.cpp  Position.h  Requests.cpp  Requests.h  StupidEngine.cpp  StupidEngine.h  constants.cpp  constants.h  engines.cpp
